Fix horizontal scroll for iOS and improve css

--- a/website/static/css/coffee-code-ws.css
+++ b/website/static/css/coffee-code-ws.css
@@ -1,4 +1,5 @@
 
+
 html {
   font-family: 'Roboto', sans-serif;
   position: relative;
@@ -6,6 +7,12 @@ html {
 
   scroll-behavior: smooth;
   word-wrap: break-word;
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: 90%;
+  }
 }
 
 #top-nav-bar-input::placeholder {
@@ -71,15 +78,22 @@ html {
 }
 
 .codehilite pre {
-  overflow: auto;
+  overflow-x: scroll;
+  overflow-wrap: initial;
   padding: 0.5rem;
 }
 
 code, .highlighted {
   background-color: #f4f8f9;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   padding: 2px;
   color: #007bff;
+}
+
+@media (max-width: 800px) {
+  html {
+    font-size: 90%;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -101,9 +115,12 @@ code, .highlighted {
 
   code, .highlighted {
     background-color: #272d3a;
-    color: #007bff;
+    color: rgb(0,198,255);
   }
 
+  a {
+    color: rgb(0,198,255);
+  }
 }
 
 .polygon-bottom-left {
